# plan2eplus

./: .coverage  .gitignore  LISENCE.md  README.md  ROADMAP.md  config.toml  justfile  pull.sh  push.sh  pyproject.toml  test.txt  time_study.bp.py  time_study.bpc.py
.github/workflows/: test.yaml
config/: test.yaml
conventions/: conventions.md
docs/: getting_started.md  guides.py  index.md  simple_project.md  start.md
docs/examples/: simple_project.py
docs/tutorials/: getting_started.md  simple_project.md
epconfig/: prod.yaml
epstudies/: .build.md.swp  .build.txt.swp  .idd_get.sh.swp  .interzone.txt.swp  afn_pressure.idd  build.md  door.txt  idd_get.sh  interzone.txt  mats.txt  schedule_compact.idd  test.txt  test2.txt  window.txt
notebooks/: triangle_patch.ipynb  xarray.ipynb
results_for_tests/two_room/: out.idf
results_for_tests/two_room_airboundary/: out.idf
sample_project/: out.idf
sample_project/results/: eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mtd  eplusout.shd  eplusout.sql  sqlite.err
site/: 404.html  index.html  search.json
src/plan2eplus/: ep_paths.py  errors.py  paths.py  paths2.py
src/replan2eplus/: errors.py  paths.py
static/_04_temp/: sample_schedule.csv
tests/: .fieldnames.txt.swp  conftest.py  fieldnames.txt  test.txt  test_afn.py  test_afn2.py  test_airboundary.py  test_config.py  test_constructions.py  test_exist_case.py  test_ezcase.py  test_materials.py  test_plane_geometry.py  test_prob_door.py  test_quick.py  test_results.py  test_subsurfaces.py  test_visuals.py  test_xarray.py  test_zones.py
tests/test_campaigns/: test_combinations.py
tests/test_config/: test_config.py
tests/test_curr/: airboundary_edges.py  test_accuracy.py  test_afn2.py  test_airboundary.py  test_constructions.py  test_data_plot.py  test_ezcase.py  test_ezcase2.py  test_just_interface.py  test_logic.py  test_materials.py  test_zones_init.py
tests/test_ezcase/: test_config.py  test_ezcase.py
tests/test_geom/: test_ortho_domain.py  test_plane_geometry.py  test_range.py
tests/test_io/: test_all.py
throwaway/: eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.mtd  eplusout.rdd  eplustbl.htm  out.idf
trials/: resplan.py
(+537 files in other folders)
